[gd_scene load_steps=7 format=3 uid="uid://dp2v0vvwacf7r"]

[ext_resource type="Script" path="res://UI/navigation_arrows.gd" id="1_jc7oj"]
[ext_resource type="Texture2D" uid="uid://fb81vbvqd75p" path="res://Assets/UI/vector_whiteIcons.svg" id="1_yd4bq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6j5a"]
atlas = ExtResource("1_yd4bq")
region = Rect2(51.9392, 1.91197, 35.9088, 30.6422)

[sub_resource type="CircleShape2D" id="CircleShape2D_8p3qu"]
radius = 80.1561

[sub_resource type="AtlasTexture" id="AtlasTexture_hpork"]
atlas = ExtResource("1_yd4bq")
region = Rect2(3, 3, 34, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_3cgia"]
radius = 74.2428

[node name="Navigation_Arrows" type="Node2D"]
z_index = 3
script = ExtResource("1_jc7oj")

[node name="Area2D_Left_Arrow" type="Area2D" parent="."]
z_index = 6
position = Vector2(106, 79)

[node name="Left_Arrow" type="Sprite2D" parent="Area2D_Left_Arrow"]
position = Vector2(-1, 1)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_t6j5a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Left_Arrow"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_8p3qu")

[node name="Area2D_Right_Arrow" type="Area2D" parent="."]
z_index = 3
position = Vector2(434, 187)

[node name="Right_Arrow" type="Sprite2D" parent="Area2D_Right_Arrow"]
position = Vector2(-1, -2)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_hpork")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Right_Arrow"]
position = Vector2(-4, 0)
shape = SubResource("CircleShape2D_3cgia")

[connection signal="area_entered" from="Area2D_Left_Arrow" to="." method="_on_area_2d_left_arrow_area_entered"]
[connection signal="area_exited" from="Area2D_Left_Arrow" to="." method="_on_area_2d_left_arrow_area_exited"]
[connection signal="mouse_entered" from="Area2D_Left_Arrow" to="." method="_on_area_2d_left_arrow_mouse_entered"]
[connection signal="mouse_exited" from="Area2D_Left_Arrow" to="." method="_on_area_2d_left_arrow_mouse_exited"]
[connection signal="mouse_entered" from="Area2D_Right_Arrow" to="." method="_on_area_2d_right_arrow_mouse_entered"]
[connection signal="mouse_exited" from="Area2D_Right_Arrow" to="." method="_on_area_2d_right_arrow_mouse_exited"]
